# rusty_dam

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
app/: Cargo.toml
libcore/: .env  Cargo.toml  clear_backups.ps1
libcore/migrations/20170417192934_crate_classification_table/: down.sql  up.sql
libcore/migrations/20170417193338_create_index_for_classification_table/: down.sql  up.sql
libcore/migrations/20170417194012_create_cls_name_path_function/: down.sql  up.sql
libcore/migrations/20170421174434_create_is_valid_cls_name_path_func/: down.sql  up.sql
libcore/migrations/20170423104154_create_field_table/: down.sql  up.sql
libcore/migrations/20170423162916_create_field_group_table/: down.sql  up.sql
libcore/migrations/20170423163243_create_field2field_group_table/: down.sql  up.sql
libcore/migrations/20170425180130_create_user_table/: up.sql
libcore/migrations/20170425181825_create_user_group_table/: down.sql  up.sql
libcore/migrations/20170425182218_create_user2user_group_table/: down.sql  up.sql
libcore/migrations/20170425183559_create_session_table/: down.sql  up.sql
libcore/migrations/20170426182527_create_session_func/: down.sql  up.sql
libcore/migrations/20170426183504_delete_session_func/: .up.sql.swo  down.sql  up.sql
libcore/migrations/20170428130934_create_admin_func/: down.sql  up.sql
libcore/migrations/20170501112500_create_cls2field_group_table/: down.sql  up.sql
libcore/migrations/20170501140311_get_id_by_path_func/: down.sql  up.sql
libcore/src/: classification.rs  configuration.rs  connection.rs  es.rs  field.rs  file.rs  fs.rs  lib.rs  pg.rs  record.rs  user.rs
libcore/src/collections/: classifications.rs  fields.rs  files.rs  mod.rs
libcore/src/models/: classification.rs  field.rs  field_group.rs  file.rs  mod.rs  record.rs  session.rs  user.rs
libcore/src/models/collections/: classifications.rs  fields.rs  files.rs  mod.rs
libcore/src/models/es/: mod.rs
libcore/src/models/pg/: mod.rs  models.rs
libcore/tests/: integration_tests.rs
web_app/: Cargo.toml  Rocket.toml
web_app/src/: main.rs
web_app/src/controllers/: account.rs  classifications.rs  home.rs  mod.rs  static_files.rs
web_app/static/scripts/rusty-dam/: ajax-utility.js  classification-tree.js
web_app/static/styles/: login.css  site.css
web_app/static/templates/: index.html.tera  login.html.tera
(+67 files in other folders)
