[package]
name = "libcore"
version = "0.1.0"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]

[dependencies]
uuid = { version = "0.4.0", features = ["serde", "v4"] }
chrono = { version = "0.3.0", features = ["serde"] }
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"

[dependencies.rs-es]
version = "0.9.0"
default-features = false
