[package]
name = "libcore"
version = "0.1.0"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]

[dependencies]
uuid = { version = "0.4.0", features = ["serde", "v4"] }
chrono = { version = "0.3.0", features = ["serde"] }
diesel = { version = "0.12.0", features = ["postgres"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.8.0"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"

[dependencies.rs-es]
version = "*"
features = [""]
default-features = false

