[package]
name = "libcore"
version = "0.1.0"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]

[dependencies]
uuid = { version = "0.5.0", features = ["serde", "v4"] }
chrono = { version = "0.3.1", features = ["serde"] }
diesel = { version = "0.13.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.10.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
tiny-keccak = "1.2.1"

[dependencies.rs-es]
version = "0.10.0"
features = [""]
default-features = false

